// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node 1`] = `
<div
  class="sidebar sidebar-calltree"
>
  Select a node to display some information about it.
</div>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node 2`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="Cjs
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="Cjs"
        />
      </h2>
    </header>
    <h3
      class="sidebar-title2"
    >
      This selected call node
    </h3>
    <div
      class="sidebar-label"
    >
      Running Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms (50%)
    </div>
    <div
      class="sidebar-label"
    >
      Self Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      —
    </div>
    <h4
      class="sidebar-title3"
    >
      Categories
    </h4>
    <div
      class="sidebar-categorylist"
    >
      <div
        class="sidebar-categoryname"
      >
        <span
          class="sidebar-color colored-square category-color-yellow"
          title="JavaScript"
        />
        JavaScript
      </div>
      <div
        class="sidebar-categorytiming"
      >
        2ms
         (
        100%
        )
      </div>
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – running time
    </h4>
    <div
      class="sidebar-label"
    >
      JS interpreter
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms
       (
      100
      %)
    </div>
    <h3
      class="sidebar-title2"
    >
      This function across the entire tree
    </h3>
    <div
      class="sidebar-label"
    >
      Running Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms (50%)
    </div>
    <div
      class="sidebar-label"
    >
      Self Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      —
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – running time
    </h4>
    <div
      class="sidebar-label"
    >
      JS interpreter
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms
       (
      100
      %)
    </div>
  </div>
</aside>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node 3`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="D
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="D"
        />
      </h2>
    </header>
    <h3
      class="sidebar-title2"
    >
      This selected call node
    </h3>
    <div
      class="sidebar-label"
    >
      Running Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms (25%)
    </div>
    <div
      class="sidebar-label"
    >
      Self Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      —
    </div>
    <h4
      class="sidebar-title3"
    >
      Categories
    </h4>
    <div
      class="sidebar-categorylist"
    >
      <div
        class="sidebar-categoryname"
      >
        <span
          class="sidebar-color colored-square category-color-yellow"
          title="JavaScript"
        />
        JavaScript
      </div>
      <div
        class="sidebar-categorytiming"
      >
        1ms
         (
        100%
        )
      </div>
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – running time
    </h4>
    <div
      class="sidebar-label"
    >
      JS interpreter
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms
       (
      100
      %)
    </div>
    <h3
      class="sidebar-title2"
    >
      This function across the entire tree
    </h3>
    <div
      class="sidebar-label"
    >
      Running Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms (25%)
    </div>
    <div
      class="sidebar-label"
    >
      Self Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      —
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – running time
    </h4>
    <div
      class="sidebar-label"
    >
      JS interpreter
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms
       (
      100
      %)
    </div>
  </div>
</aside>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node 4`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="H
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="H"
        />
      </h2>
    </header>
    <h3
      class="sidebar-title2"
    >
      This selected call node
    </h3>
    <div
      class="sidebar-label"
    >
      Running Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms (50%)
    </div>
    <div
      class="sidebar-label"
    >
      Self Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms (25%)
    </div>
    <h4
      class="sidebar-title3"
    >
      Categories
    </h4>
    <div
      class="sidebar-categorylist"
    >
      <div
        class="sidebar-categoryname"
      >
        <span
          class="sidebar-color colored-square category-color-transparent"
          title="Idle"
        />
        Idle
      </div>
      <div
        class="sidebar-categorytiming"
      >
        1ms
         (
        50%
        )
      </div>
      <div
        class="sidebar-categoryname"
      >
        <span
          class="sidebar-color colored-square category-color-purple"
          title="Layout"
        />
        Layout
      </div>
      <div
        class="sidebar-categorytiming"
      >
        1ms
         (
        50%
        )
      </div>
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – running time
    </h4>
    <div
      class="sidebar-label"
    >
      Native code
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms
       (
      100
      %)
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – self time
    </h4>
    <div
      class="sidebar-label"
    >
      Native code
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms
       (
      100
      %)
    </div>
    <h3
      class="sidebar-title2"
    >
      This function across the entire tree
    </h3>
    <div
      class="sidebar-label"
    >
      Running Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms (50%)
    </div>
    <div
      class="sidebar-label"
    >
      Self Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms (25%)
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – running time
    </h4>
    <div
      class="sidebar-label"
    >
      Native code
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms
       (
      100
      %)
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – self time
    </h4>
    <div
      class="sidebar-label"
    >
      Native code
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms
       (
      100
      %)
    </div>
  </div>
</aside>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node 5`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="Ejs
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="Ejs"
        />
      </h2>
    </header>
    <h3
      class="sidebar-title2"
    >
      This selected call node
    </h3>
    <div
      class="sidebar-label"
    >
      Running Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms (25%)
    </div>
    <div
      class="sidebar-label"
    >
      Self Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms (25%)
    </div>
    <h4
      class="sidebar-title3"
    >
      Categories
    </h4>
    <div
      class="sidebar-categorylist"
    >
      <div
        class="sidebar-categoryname"
      >
        <span
          class="sidebar-color colored-square category-color-yellow"
          title="JavaScript"
        />
        JavaScript
      </div>
      <div
        class="sidebar-categorytiming"
      >
        1ms
         (
        100%
        )
      </div>
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – running time
    </h4>
    <div
      class="sidebar-label"
    >
      JS interpreter
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms
       (
      100
      %)
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – self time
    </h4>
    <div
      class="sidebar-label"
    >
      JS interpreter
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms
       (
      100
      %)
    </div>
    <h3
      class="sidebar-title2"
    >
      This function across the entire tree
    </h3>
    <div
      class="sidebar-label"
    >
      Running Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms (50%)
    </div>
    <div
      class="sidebar-label"
    >
      Self Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms (50%)
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – running time
    </h4>
    <div
      class="sidebar-label"
    >
      JS interpreter
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms
       (
      100
      %)
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – self time
    </h4>
    <div
      class="sidebar-label"
    >
      JS interpreter
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms
       (
      100
      %)
    </div>
  </div>
</aside>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node in an inverted tree 1`] = `
<div
  class="sidebar sidebar-calltree"
>
  Select a node to display some information about it.
</div>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node in an inverted tree 2`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="Ejs
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="Ejs"
        />
      </h2>
    </header>
    <h3
      class="sidebar-title2"
    >
      This selected call node
    </h3>
    <div
      class="sidebar-label"
    >
      Running Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms (50%)
    </div>
    <div
      class="sidebar-label"
    >
      Self Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms (50%)
    </div>
    <h4
      class="sidebar-title3"
    >
      Categories
    </h4>
    <div
      class="sidebar-categorylist"
    >
      <div
        class="sidebar-categoryname"
      >
        <span
          class="sidebar-color colored-square category-color-yellow"
          title="JavaScript"
        />
        JavaScript
      </div>
      <div
        class="sidebar-categorytiming"
      >
        2ms
         (
        100%
        )
      </div>
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – running time
    </h4>
    <div
      class="sidebar-label"
    >
      JS interpreter
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms
       (
      100
      %)
    </div>
    <h3
      class="sidebar-title2"
    >
      This function across the entire tree
    </h3>
    <div
      class="sidebar-label"
    >
      Running Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms (50%)
    </div>
    <div
      class="sidebar-label"
    >
      Self Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms (50%)
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – running time
    </h4>
    <div
      class="sidebar-label"
    >
      JS interpreter
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms
       (
      100
      %)
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – self time
    </h4>
    <div
      class="sidebar-label"
    >
      JS interpreter
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms
       (
      100
      %)
    </div>
  </div>
</aside>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node in an inverted tree 3`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="H
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="H"
        />
      </h2>
    </header>
    <h3
      class="sidebar-title2"
    >
      This selected call node
    </h3>
    <div
      class="sidebar-label"
    >
      Running Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms (25%)
    </div>
    <div
      class="sidebar-label"
    >
      Self Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms (25%)
    </div>
    <h4
      class="sidebar-title3"
    >
      Categories
    </h4>
    <div
      class="sidebar-categorylist"
    >
      <div
        class="sidebar-categoryname"
      >
        <span
          class="sidebar-color colored-square category-color-purple"
          title="Layout"
        />
        Layout
      </div>
      <div
        class="sidebar-categorytiming"
      >
        1ms
         (
        100%
        )
      </div>
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – running time
    </h4>
    <div
      class="sidebar-label"
    >
      Native code
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms
       (
      100
      %)
    </div>
    <h3
      class="sidebar-title2"
    >
      This function across the entire tree
    </h3>
    <div
      class="sidebar-label"
    >
      Running Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms (50%)
    </div>
    <div
      class="sidebar-label"
    >
      Self Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms (25%)
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – running time
    </h4>
    <div
      class="sidebar-label"
    >
      Native code
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms
       (
      100
      %)
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – self time
    </h4>
    <div
      class="sidebar-label"
    >
      Native code
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms
       (
      100
      %)
    </div>
  </div>
</aside>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node in an inverted tree 4`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="H
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="H"
        />
      </h2>
    </header>
    <h3
      class="sidebar-title2"
    >
      This selected call node
    </h3>
    <div
      class="sidebar-label"
    >
      Running Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms (25%)
    </div>
    <div
      class="sidebar-label"
    >
      Self Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      —
    </div>
    <h4
      class="sidebar-title3"
    >
      Categories
    </h4>
    <div
      class="sidebar-categorylist"
    >
      <div
        class="sidebar-categoryname"
      >
        <span
          class="sidebar-color colored-square category-color-transparent"
          title="Idle"
        />
        Idle
      </div>
      <div
        class="sidebar-categorytiming"
      >
        1ms
         (
        100%
        )
      </div>
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – running time
    </h4>
    <div
      class="sidebar-label"
    >
      Native code
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms
       (
      100
      %)
    </div>
    <h3
      class="sidebar-title2"
    >
      This function across the entire tree
    </h3>
    <div
      class="sidebar-label"
    >
      Running Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms (50%)
    </div>
    <div
      class="sidebar-label"
    >
      Self Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms (25%)
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – running time
    </h4>
    <div
      class="sidebar-label"
    >
      Native code
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms
       (
      100
      %)
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – self time
    </h4>
    <div
      class="sidebar-label"
    >
      Native code
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms
       (
      100
      %)
    </div>
  </div>
</aside>
`;

exports[`CallTreeSidebar matches the snapshots when displaying data about the currently selected node in an inverted tree 5`] = `
<aside
  class="sidebar sidebar-calltree"
>
  <div
    class="sidebar-contents-wrapper"
  >
    <header
      class="sidebar-titlegroup"
    >
      <h2
        class="sidebar-title can-select-content"
        title="A
(click to select)"
      >
        <input
          class="can-select-content-input"
          readonly=""
          value="A"
        />
      </h2>
    </header>
    <h3
      class="sidebar-title2"
    >
      This selected call node
    </h3>
    <div
      class="sidebar-label"
    >
      Running Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms (25%)
    </div>
    <div
      class="sidebar-label"
    >
      Self Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      —
    </div>
    <h4
      class="sidebar-title3"
    >
      Categories
    </h4>
    <div
      class="sidebar-categorylist"
    >
      <div
        class="sidebar-categoryname"
      >
        <span
          class="sidebar-color colored-square category-color-purple"
          title="Layout"
        />
        Layout
      </div>
      <div
        class="sidebar-categorytiming"
      >
        1ms
         (
        100%
        )
      </div>
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – running time
    </h4>
    <div
      class="sidebar-label"
    >
      Native code
      :
    </div>
    <div
      class="sidebar-value"
    >
      1ms
       (
      100
      %)
    </div>
    <h3
      class="sidebar-title2"
    >
      This function across the entire tree
    </h3>
    <div
      class="sidebar-label"
    >
      Running Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      4ms (100%)
    </div>
    <div
      class="sidebar-label"
    >
      Self Time
      :
    </div>
    <div
      class="sidebar-value"
    >
      —
    </div>
    <h4
      class="sidebar-title3"
    >
      Implementation – running time
    </h4>
    <div
      class="sidebar-label"
    >
      Native code
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms
       (
      50
      %)
    </div>
    <div
      class="sidebar-label"
    >
      JS interpreter
      :
    </div>
    <div
      class="sidebar-value"
    >
      2ms
       (
      50
      %)
    </div>
  </div>
</aside>
`;
